@@ -35,6 +35,7 @@ from Products.GenericSetup.interfaces import IBody
 from Products.GenericSetup.interfaces import ISetupEnviron
 from Products.CPSDirectory.interfaces import IDirectoryTool
 from Products.CPSDirectory.interfaces import IDirectory
+from Products.CPSDirectory.interfaces import IMetaDirectory
 from Products.CPSDirectory.interfaces import IContentishDirectory
 
 TOOL = 'portal_directories'
@@ -119,6 +120,8 @@ class DirectoryXMLAdapter(XMLAdapterBase, CacheableHelpers,
         node = self._getObjectNode('object')
         node.appendChild(self._extractProperties())
         node.appendChild(self._extractEntryLR())
+        if IMetaDirectory.providedBy(self.context):
+            node.appendChild(self._extractBackings())
         child = self._extractCacheableManagerAssociation()
         if child is not None:
             node.appendChild(child)
@@ -137,17 +140,47 @@ class DirectoryXMLAdapter(XMLAdapterBase, CacheableHelpers,
             fragment.appendChild(child)
         return fragment
 
+    def _extractBackingInfo(self, info):
+        fragment = self._doc.createDocumentFragment()
+        for b_name, name in info['field_rename'].items():
+            child = self._doc.createElement('field-rename')
+            child.setAttribute('in-backing', b_name)
+            child.setAttribute('in-meta', name)
+            fragment.appendChild(child)
+        for ignore in info['field_ignore']:
+            child = self._doc.createElement('field-ignore')
+            child.setAttribute('name', ignore)
+            fragment.appendChild(child)
+        child = self._doc.createElement('missing-entry-expr')
+        child.appendChild(self._doc.createTextNode(info['missing_entry_expr']))
+        fragment.appendChild(child)
+        return fragment
+
+    def _extractBackings(self):
+        fragment = self._doc.createDocumentFragment()
+        infos = self.context.getBackingDirectories(no_dir=True)
+        for info in infos:
+            child = self._doc.createElement('backing')
+            child.setAttribute('name', info['dir_id'])
+            child.appendChild(self._extractBackingInfo(info))
+            fragment.appendChild(child)
+        return fragment
 
     def _importNode(self, node):
         """Import the object from the DOM node.
         """
+        is_meta = IMetaDirectory.providedBy(self.context)
         if self.environ.shouldPurge():
             self._purgeProperties()
             self._purgeEntryLR()
+            if is_meta:
+                self._purgeBackings()
             self._purgeCacheableManagerAssociation()
 
         self._initProperties(node)
         self._initEntryLR(node)
+        if is_meta:
+            self._initBackings(node)
         self._initCacheableManagerAssociation(node)
 
         self._logger.info("%r directory imported." % self.context.getId())
@@ -167,6 +200,42 @@ class DirectoryXMLAdapter(XMLAdapterBase, CacheableHelpers,
             if res:
                 # Compilation problem
                 raise ValueError(res)
+
+    def _purgeBackings(self):
+        self.context.backings_dir_infos = []
+
+    def _initBackingInfo(self, node, bdir_id, new=True):
+        field_ignore = []
+        field_renames = []
+        missing_entry_expr = ''
+        for child in node.childNodes:
+            if child.nodeName == 'field-ignore':
+                field_ignore.append(str(child.getAttribute('name')))
+            elif child.nodeName == 'field-rename':
+                in_backing = str(child.getAttribute('in-backing'))
+                in_meta = str(child.getAttribute('in-meta'))
+                field_renames.append(
+                    {'b_id': str(child.getAttribute('in-backing')),
+                     'id' : str(child.getAttribute('in-meta')),})
+            elif child.nodeName == 'missing-entry-expr':
+                missing_entry_expr = str(self._getNodeText(child))
+
+        if new:
+            meth = self.context.manage_addBacking
+        else:
+            meth = self.context.manage_changeBacking
+        meth(bdir_id, field_ignore, field_renames, missing_entry_expr)
+
+    def _initBackings(self, node):
+        mdir = self.context
+        existing = [info['dir_id']
+                    for info in mdir.getBackingDirectories(no_dir=True)]
+        for child in node.childNodes:
+            if child.nodeName != 'backing':
+                continue
+            bdir_id = child.getAttribute('name')
+            self._initBackingInfo(child, bdir_id, new=bdir_id not in existing)
+
 
 class ContentishDirectoryXMLAdapter(DirectoryXMLAdapter):
     """XML importer and exporter for a directory.
