@@ -8,5 +8,6 @@ Bug fixes:
 ~~~~~~~~~~
 - #1479: fixed ZMI add menu
 New internal features:
+- #1465: wrote GenericSetup IO for MetaDirectories backings
 ~~~~~~~~~~~~~~~~~~~~~~
 - #1295: show search form on search results page
